[DEV 2] COMMIT que causou problema conflituoso

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>
         Hello, world!
     </h1>
+    <h2> Subtítulo </h2>
     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos magni modi earum? Rem sit odit quod ut voluptatem? Doloremque ullam sunt aspernatur quibusdam quasi molestias architecto quidem odio nobis!</h3>
 </body>
 </html>
