--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Corrigido</title>
 </head>
 <body>
     <h1>
         Hello, world!
     </h1>
+    <h2>Subtexto</h2>
     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos magni modi earum? Rem sit odit quod ut voluptatem? Doloremque ullam sunt aspernatur quibusdam quasi molestias architecto quidem odio nobis!</h3>
 </body>
 </html>
