--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>
-        Hello, world!
+        Hello,
     </h1>
-    <h2> Subtítulo </h2>
+    <h2> World </h2>
     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos magni modi earum? Rem sit odit quod ut voluptatem? Doloremque ullam sunt aspernatur quibusdam quasi molestias architecto quidem odio nobis!</h3>
 </body>
 </html>
