15º commit - Caos anarquia

--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>
-        Hello,
-    </h1>
-    <h2> World </h2>
-    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos magni modi earum? Rem sit odit quod ut voluptatem? Doloremque ullam sunt aspernatur quibusdam quasi molestias architecto quidem odio nobis!</h3>
+    dadsadasdas
 </body>
 </html>
