Revert "15º commit - Caos anarquia"
This reverts commit 125555773be98b8e2d25de2796762128ae209f68.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    dadsadasdas
+    <h1>
+        Hello,
+    </h1>
+    <h2> World </h2>
+    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quos magni modi earum? Rem sit odit quod ut voluptatem? Doloremque ullam sunt aspernatur quibusdam quasi molestias architecto quidem odio nobis!</h3>
 </body>
 </html>
